--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 /*
-    CSS File for Basic-Portfolio web site.
-    Joed Machado. 20180506
+    CSS File for Responsive-Portfolio web site.
+    Joed Machado. 20180518
 */
 
 body {
     background-color: #4aaaa5;
     background-image: url('../images/dust_scratches.png');
+    
 }
 
 .mainHeader {
@@ -76,7 +77,7 @@ hr {
 
 footer {
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     border-top: 5px solid #4aaaa5;
     background-color: #666666;
@@ -127,4 +128,62 @@ footer {
 .itemPic {
     width: 100%;
     height: 100%;
+}
+
+/* Media Queries break points */
+
+/* Breakpoint for screen size < 980 pixels*/
+@media only screen and (max-width: 980px) {
+    /*
+    body {
+        background-color: lightcoral;
+    }
+    */
+
+    .insideHeader, .about {
+        width: 70%;
+    }
+}
+
+
+/* Breakpoint for screen size < 768 pixels*/
+@media only screen and (max-width: 768px) {
+    /*
+    body {
+        background-color: lightgreen;
+    }
+    */
+
+    .myPic {
+        width: 100%;
+        height: auto;
+        float: none;
+        margin: 0 0 10px 0;
+    }
+
+    .insideHeader {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .topNav {
+        padding: 20px 0;
+    }
+
+    .myName {
+        padding: 10px 0;
+        text-align: center;
+    }
+
+
+}
+
+
+/* Breakpoint for screen size < 640 pixels*/
+@media only screen and (max-width: 640px) {
+    /*
+    body {
+        background-color: lightblue;
+    }
+    */
 }
