--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,7 @@ footer {
     margin: 0 30px 20px 0;
     background-color: #666666;
     position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .itemTitle {
